--- a/railway.toml
+++ b/railway.toml
@@ -2,9 +2,10 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "gunicorn stationery_tracker.wsgi:application --bind 0.0.0.0:$PORT --workers 1 --timeout 300 --access-logfile - --error-logfile - --log-level critical --capture-output"
+startCommand = "python manage.py migrate --noinput && gunicorn stationery_tracker.production_settings:application --bind 0.0.0.0:$PORT --workers 1 --timeout 300 --access-logfile - --error-logfile - --log-level critical --capture-output"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [env]
 PYTHON_VERSION = "3.11"
+DJANGO_SETTINGS_MODULE = "stationery_tracker.production_settings"
